# obsidian-mcp

./: .env.example  .gitignore  .vault-rules  03_maxed_out_features_and_scaling.md  README.md  Run.txt  WINDOWS_SETUP_FIX.md  agent_logs.md  install.ps1  install.sh  pyproject.toml
DOCS/: AICONTEXT.md  README.md  backlink-index.md  codebase_reference.md  tools-reference.md
DOCS/features/: ADAPTER_INTEGRATION.md  advanced-knowledge-tools.md  core-mcp-tools.md  environment-and-architecture.md  permissions-and-web-ui.md
DOCS/superpowers/plans/: 2026-06-12-obsidian-mcp-advanced-tools.md  2026-06-12-obsidian-mcp-core-tools.md  2026-06-12-obsidian-mcp-foundation.md  2026-06-12-obsidian-mcp-permissions-web-ui.md
DOCS/superpowers/specs/: 2026-06-12-obsidian-mcp-advanced-tools-design.md  2026-06-12-obsidian-mcp-core-tools-design.md  2026-06-12-obsidian-mcp-foundation-design.md  2026-06-12-obsidian-mcp-permissions-web-ui-design.md
Prompts/: 01_environment_and_architecture.md  02_core_mcp_server_and_tools.md
_test_/unit/: test_config.py  test_errors.py  test_logging.py  test_permissions.py  test_server.py
_test_/unit/knowledge/: test_analysis.py  test_service.py
_test_/unit/tools/: test_core_tools.py  test_knowledge_tools.py
_test_/unit/vault/: test_metadata.py  test_paths.py  test_service.py
_test_/unit/web/: test_app.py
src/obsidian_mcp/: README.md  __init__.py  __main__.py  _web_entry.py  config.py  errors.py  logging.py  permissions.py  pyproject.toml  server.py
src/obsidian_mcp/adapters/: __init__.py  auto.py  base.py  filesystem.py  rest_api.py
src/obsidian_mcp/knowledge/: __init__.py  analysis.py  service.py
src/obsidian_mcp/plugins/: __init__.py  dataview.py  excalidraw.py  kanban.py  omnisearch.py  tasks.py  templater.py
src/obsidian_mcp/tools/: __init__.py  core.py  knowledge.py  plugins.py
src/obsidian_mcp/vault/: __init__.py  index.py  metadata.py  paths.py  service.py
src/obsidian_mcp/web/: __init__.py  app.py
src/obsidian_mcp/web/static/: app.js  index.html  styles.css
