[project]
name = "obsidian-mcp"
version = "0.1.0"
description = "Production-grade MCP server foundation for Obsidian vault workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0.0",
    "rapidfuzz>=3.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
obsidian-mcp = "obsidian_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["_test_"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
