[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-mcp"
version = "0.3.1"
description = "MCP server for Obsidian vaults — Dataview, Tasks, Templater, Excalidraw, Omnisearch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["obsidian", "mcp", "knowledge-management", "claude", "llm"]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "rapidfuzz>=3.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
# Separate entry points = separate .exe files on Windows = no locking conflict
obsidian-mcp     = "obsidian_mcp.__main__:main"
obsidian-mcp-web = "obsidian_mcp._web_entry:main"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_mcp"]

# ── uv settings ────────────────────────────────────────────────────────
# Prevents uv from rebuilding the package on every `uv run` invocation.
# After `uv pip install -e .` the scripts are stable.
[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
